Port video runtime to Fabric 1.20.2