@@ -13,7 +13,7 @@ public final class CinemarrVideoAudioManager {
             CinemarrVideoPlayback pipeline=playback.pipeline(stream.key());if(pipeline==null)continue;
             java.util.List<stonytark.cinemarr.core.protocol.VideoPackets.SessionState> televisions=state.televisionsForStream(stream.key());if(televisions.isEmpty())continue;
             net.minecraft.world.phys.Vec3 listener=net.minecraft.client.Minecraft.getInstance().gameRenderer.getMainCamera().getPosition();
-            stonytark.cinemarr.core.protocol.VideoPackets.SessionState nearest=televisions.stream().min(java.util.Comparator.comparingDouble(tv->CinemarrVideoAudio.nearestScreenPoint(tv,listener).distanceToSqr(listener))).orElse(televisions.getFirst());
+            stonytark.cinemarr.core.protocol.VideoPackets.SessionState nearest=televisions.stream().min(java.util.Comparator.comparingDouble(tv->CinemarrVideoAudio.nearestScreenPoint(tv,listener).distanceToSqr(listener))).orElse(televisions.get(0));
             current.add(stream.key());CinemarrVideoAudio audio=players.computeIfAbsent(stream.key(),ignored->new CinemarrVideoAudio());audio.tick(pipeline,nearest);pipeline.sendHealth(stream,audio.underruns());
         }
         for(CinemarrVideoClientState.StreamKey key:new ArrayList<>(players.keySet()))if(!current.contains(key)){players.remove(key).reset();}
